kubernetes-manifests/market-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-api
  namespace: 0913market
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: market-api
  template:
    metadata:
      labels:
        app: market-api
    spec:
      containers:
        - name: market-api-container
          image: 713881790372.dkr.ecr.ap-northeast-2.amazonaws.com/market-api:0.0.1
          resources:
            requests:
              memory: "1024Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","sleep 10"]
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 1
            failureThreshold: 7
