kubernetes-manifests/market-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-api-service
  namespace: 0913market
spec:
  selector:
    app: market-api
  ports:
    - protocol: TCP
      port: 8080
