kubernetes-manifests/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: infra
spec:
  type: ExternalName
  externalName: market-db.cdgiaws4mbto.ap-northeast-2.rds.amazonaws.com
