kubernetes-manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: infra
spec:
  type: ExternalName
  externalName: market-redis-001.qdayc6.0001.apn2.cache.amazonaws.com
