kubernetes-manifests/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: 0913market
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: "alb"
  defaultBackend:
    service:
      name: market-api-service
      port:
        number: 8080
  rules:
    - http:
        paths:
          - path: /market
            pathType: Prefix
            backend:
              service:
                name: market-api-service
                port:
                  number: 8080
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: market-api-service
                port:
                  number: 8080
